2015-11-24  6.9.2-7 Dirk Lemstra <dirk@lem.....org>
  * The DICOM reader now handles the rescale intercept and slope.

2015-11-14  6.9.2-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-6, GIT revision 10341:f408196:20151113.

2015-11-08  6.9.2-6 Cristy  <quetzlzacatenango@image...>
  * PixelColor off by one on i386 (reference
    https://github.com/ImageMagick/ImageMagick/issues/54).
  * Eliminate stack overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28658).

2015-11-03  6.9.2-6 Dirk Lemstra <dirk@lem.....org>
  * Added local contrast enhancement.
  * Fixed bug in SetPixelCacheExtent that made images all black (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28514).
  * Added support for reading DICOM images with implicit vr little-endian
    transfer syntax.

2015-11-02  6.9.2-6 Samuel Thibault <samuel.thibault@...org> 
  * Added 6dot variant for unicode and iso braille formats (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&p=127111).

2015-10-31  6.9.2-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-5, GIT revision 10316:86a76b6:20151031.

2015-10-15  6.9.2-5 Dirk Lemstra <dirk@lem.....org>
  * Fixed alpha blending issue with semi-transparent pixels in the merged
    image of PSD files. This can be disabled by setting the option
    'psd:alpha-unblend' to 'off' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28169).
  * Fixed issue in jpeg:extent that prevented it from working (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=126638).
  * Fixed memory leak when reading Photoshop layers in a TIFF file.

2015-10-12  6.9.2-5 Cristy  <quetzlzacatenango@image...>
  * Support gradient:bounding-box, gradient:vector, gradient:center, and
    gradient:radius to shape the gradient rendering.
  * Recognize label:@- as stdin (reference